--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Cookery</string>
+    <string name="home">Home</string>
+    <string name="fridge">Fridge</string>
+    <string name="recipe">Recipe</string>
+
 </resources>
