aggiunta scelta filtri e finito chip

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     </string>
 
     <string name="filter_string"> filter </string>
+    <string name="MyRecipes_chips_string"> add recipe</string>
 
 
 </resources>
