--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,20 @@
     <string name="app_name">Cookery</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="search_string">search here</string>
+    <string name="search_string">Search Here</string>
     <string name="My_recipes_string">
        <font size="20">My Recipes</font>
     </string>
 
-    <string name="filter_string"> filter </string>
-    <string name="MyRecipes_chips_string"> add recipe</string>
 
+    <!-- strings per fragment my recipe -->
+
+    <string name="filter_string"> Filter </string>
+    <string name="MyRecipes_chips_string"> Add Recipe</string>
+
+    <!-- fine strings per fragment my recipe -->
+
+    <!-- strings per fragment alimentar preferences  -->
     <string name="intollerance_string">Intollerance</string>
     <string name="preferences_string">Preferences</string>
 
@@ -23,4 +29,19 @@
     <string name="pescetarian_string">Pescetarian</string>
 
     <string name="save_string">Save</string>
+
+    <!-- fine strings per fragment alimentar preferences  -->
+
+
+    <!-- strings per dialog aggiunta ingredienti e step -->
+
+    <string name="step_string">Step</string>
+    <string name="add_button">Add</string>
+    <string name="delete_button">Delete</string>
+    <string name="step_hint_string">Write a step</string>
+    <string name="ingredient_hint_string">Insert a quantity</string>
+
+    <!-- fine strings per dialog aggiunta ingredienti e step -->
+
+
 </resources>
