--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,24 @@
     <string name="filter_string"> Filter </string>
     <string name="MyRecipes_chips_string"> Add Recipe</string>
 
+    <string name="filter0">Appetizers</string>
+    <string name="filter1">First course</string>
+    <string name="filter2">Main meal</string>
+    <string name="filter3">Side dish</string>
+    <string name="filter4">Desserts</string>
+    <string name="dialog_title">Select recipe type</string>
+
     <!-- fine strings per fragment my recipe -->
 
+    <!-- inizio strings per grid view adapter MyRecipesFragment -->
+
+    <string name="no_results_found">No results found</string>
+
+    <!-- fine strings per grid view adapter MyRecipesFragment -->
+    
+    
+    
+    
     <!-- strings per fragment alimentar preferences  -->
     <string name="intollerance_string">Intollerance</string>
     <string name="preferences_string">Preferences</string>
@@ -40,6 +56,8 @@
     <string name="delete_button">Delete</string>
     <string name="step_hint_string">Write a step</string>
     <string name="ingredient_hint_string">Insert a quantity</string>
+    <string name="zero_ingredient_quantity">Impossible to insert this quantity</string>
+    <string name="void_step">Impossible add an empty step</string>
 
     <!-- fine strings per dialog aggiunta ingredienti e step -->
 
