iniziato ad aggiungere parser json

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,12 @@
     <!-- fine strings MyProfileFragment -->
 
 
+    <!-- string retrofit -->
+
+    <string name="errorRetriveData">Error in retrieving data</string>
+    <string name="connectionError"> Something went wrong, pleas check your connection</string>
+
+
 
 
 </resources>
