--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,13 @@
     <string name="errorRetriveData">Error in retrieving data</string>
     <string name="connectionError"> Something went wrong, pleas check your connection</string>
 
+    <!-- fine string retrofit -->
 
 
+    <!-- string singleRecipeActivity -->
 
+    <string name="noStepFoundString">NO STEP FOUND FOR THIS RECIPE</string>
+
+
+    <!-- fine string singleRecipeActivity -->
 </resources>
