sistemata la home e aggiornamento ricette dopo modifiche ingredienti

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="Ready_to_cook">Ready to cook</string>
     <string name="img_recipe">img_recipe</string>
     <string name="like">like</string>
-    <string name="crea_una_lista_della_spesa">Crea una lista della spesa</string>
+    <string name="crea_una_lista_della_spesa">Create a shopping list</string>
     <string name="my_pantry">My pantry</string>
     <string name="my_fridge">My fridge</string>
 
