--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,14 +17,31 @@
 
 
     <!-- strings per fragment alimentar preferences  -->
+
+    <string name="alimentar_preference">Alimentar Preferences</string>
     <string name="intollerance_string">Intollerance</string>
-    <string name="preferences_string">Preferences</string>
+    <string name="preferences_string">Diet</string>
     <string name="gluten_intolerance">Gluten</string>
-    <string name="lactose_intollerance">Lactose</string>
-    <string name="nust_intollerance">Nuts</string>
+    <string name="lactose_intollerance">Dairy</string>
+    <string name="egg_intollerance">Egg</string>
+    <string name="penaut_intollerance">Penaut</string>
+    <string name="nuts_intollerance">Tree Nut</string>
+    <string name="grain_intollerance">Grain</string>
+    <string name="Seafood_intollerance">Seafood</string>
+    <string name="Sesame_intollerance">Sesame</string>
+    <string name="Shellfish_intollerance">Shellfish</string>
+    <string name="Soy_intollerance">Soy</string>
+    <string name="Sulfite_intollerance">Sulfite</string>
+    <string name="Wheat_intollerance">Wheat</string>
+
     <string name="vegan_string">Vegan</string>
+    <string name="Ketogenic_string">Ketogenic</string>
+    <string name="Paleo_string">Paleo</string>
     <string name="vegetarian_string">Vegetarian</string>
     <string name="pescetarian_string">Pescetarian</string>
+    <string name="glutenFree_string">Glute Free</string>
+
+
     <string name="save_string">Save</string>
 
     <!-- fine strings per fragment alimentar preferences  -->
