aggiunto riquadro immagine make recipe

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,7 +138,7 @@
     <string name="number_of_servings">Number of servings:</string>
     <string name="add_ingredients">Add ingredients</string>
     <string name="add_steps">Add steps</string>
-    <string name="add_image">Add image</string>
+    <string name="choose_image">Choose an image </string>
     <string name="save_recipe">Save recipe</string>
     <!-- fine string makeRecipe -->
 
