--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     <string name="Paleo_string">Paleo</string>
     <string name="vegetarian_string">Vegetarian</string>
     <string name="pescetarian_string">Pescetarian</string>
-    <string name="glutenFree_string">Glute Free</string>
+    <string name="glutenFree_string">Gluten Free</string>
 
 
     <string name="save_string">Save</string>
