--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,6 +180,8 @@
     <string name="update_password">Password has been updated</string>
     <string name="update_password_fail">Password update has failed, try again</string>
     <string name="your_profile">Your profile</string>
+    <string name="password_hint">Insert a new password here</string>
+
 
 
     <!-- fine string registrazione e log-in-->
